2013-06-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py (DirectMessageEntry): Fixed a bug that
	  prevented showing direct messages (issue #42).

2013-06-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/previewer.py, view.py, twitter/tweetentry.py: Added
	  support for GNOME sushi previewer.

2013-06-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* view.py, window.py: Added support for favicon.
	  Added new GSettings key '/apps/gfeedline/view/favicon'.

2013-06-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.2 release.
	* updatewindow.py, view.py, window.py, gfeedline.js: Added
	  support for destroying statuses on Twitter.

2013-06-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/account.py, twitter/tweetentry.py, updatewindow.py:
	  Started implementation of destroying statuses on Twitter.
	* accountliststore.py, feedsource.py: Fixed account data unicode
	  problem. Thanks @esjima!

2013-05-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ar.po: Updated Arabic translation.  Thanks Humaidan Mohammed!
	* de_DE.po: Updated German translation.  Thanks t_bb_!
	* facebook/entry.py, facebook/output.py: Fixed Facebook unread flags.

2013-05-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py, feedsource.py, view.py: Fixed multi-column related
	  bugs.

2013-05-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py (TwitterEntities): Added support for
	  Twitter entities (issue #18) and inline image view (issue #9).

2013-05-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py (TweetEntry): Fixed Twitter commands.
	* facebook/entry.py: Removed invalid characters.

2013-05-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py: Fixed retweet event bugs.
	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme!
	* po/nl_NL.po: Added new Dutch translation.  Thanks Heimen Stoffels!
	* plugins/base/output.py: Fixed type ploblems of 'last_id'.
